--- a/SimpleStyle.css
+++ b/SimpleStyle.css
@@ -2,7 +2,7 @@ h1{
     text-align: center;
 }
 *{
-    background-color: lightsteelblue;
+    background-color: aliceblue;
     text-align: center;
 }
 div a:hover{
